cabal-version:      3.4
name:               cbf
version:            0.1.0.0
synopsis:
    Bindings to read Crystallographic Binary Files (mostly from detectors)

-- description:
homepage:           https://github.com/pmiddend/cbf-hs
license:            BSD-3-Clause
license-file:       LICENSE
author:             Philipp Middendorf
maintainer:         philipp.middendorf@desy.de
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings-and-extensions
    ghc-options: -Wall
    default-extensions: ImportQualifiedPost
                      , BlockArguments
                      , NamedFieldPuns

library
    import:           warnings-and-extensions
    exposed-modules:  Data.CBF
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.2.0
                    , attoparsec
                    , text
                    , bytestring
                    , vector
                    , binary
    hs-source-dirs:   lib
    default-language: Haskell2010

executable cbf-bench
    import:           warnings-and-extensions
    default-language: Haskell2010
    -- type:             exitcode-stdio-1.0
    hs-source-dirs:   bench
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        bytestring,
        cbf,
        vector,
        binary
    
test-suite cbf-test
    import:           warnings-and-extensions
    default-language: Haskell2010
    -- other-modules:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.2.0,
        tasty,
        tasty-hunit,
        bytestring,
        cbf,
        vector,
        binary
