cabal-version:      3.4
name:               cbf
version:            0.1.0.0
synopsis:
    Bindings to read Crystallographic Binary Files (mostly from detectors)
-- description:        Parsing routines for the Crystallographic Binary File (CBF) format.
homepage:           https://github.com/pmiddend/cbf-hs
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Philipp Middendorf
maintainer:         philipp.middendorf@desy.de
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings-and-extensions
    ghc-options: -Wall
    default-extensions: ImportQualifiedPost
                      , BlockArguments
                      , NamedFieldPuns

library
    import:           warnings-and-extensions
    exposed-modules:  Data.CBF
    -- other-modules:
    -- other-extensions:
    build-depends:
      attoparsec >= 0.14.4 && < 0.15,
      base >= 4.15 && < 5,
      binary >= 0.8.9 && < 0.9,
      bytestring >= 0.12.2 && < 0.13,
      text >= 2.1.3 && < 2.2,
      vector >= 0.13.2 && < 0.14,
    hs-source-dirs:   lib
    default-language: Haskell2010

executable cbf-bench-binary
    import:           warnings-and-extensions
    default-language: Haskell2010
    -- type:             exitcode-stdio-1.0
    hs-source-dirs:   bench
    main-is:          Binary.hs
    build-depends:
      base >= 4.15 && < 5,
      binary >= 0.8.9 && < 0.9,
      bytestring >= 0.12.2 && < 0.13,
      vector >= 0.13.2 && < 0.14,
      cbf >= 0.1.0.0
    
test-suite cbf-test
    import:           warnings-and-extensions
    default-language: Haskell2010
    -- other-modules:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        tasty,
        tasty-hunit,
        bytestring,
        cbf,
        vector,
        binary,
        cbf >= 0.1.0.0
